syntax = "proto3";

package models;
option go_package="code.cloudfoundry.org/bbs/models";

import "modification_tag.proto";

message ActualLRPGroup {
  option deprecated = true;
  ActualLRP instance = 1;
  ActualLRP evacuating = 2;
}

message PortMapping {
  uint32 container_port = 1 [json_name = "container_port"];
  uint32 host_port = 2 [json_name = "host_port"];
  uint32 container_tls_proxy_port = 3 [json_name = "container_tls_proxy_port"];
  uint32 host_tls_proxy_port = 4 [json_name = "host_tls_proxy_port"];
}

message ActualLRPKey {
  string process_guid = 1 [json_name = "process_guid"];
  int32 index = 2 [json_name = "index"];
  string domain = 3 [json_name = "domain"];
}

message ActualLRPInstanceKey {
  string instance_guid = 1 [json_name = "instance_guid"];
  string cell_id = 2 [json_name = "cell_id"];
}

message ActualLRPNetInfo {
  string address = 1 [json_name = "address"];
  repeated PortMapping ports = 2 [json_name = "ports"];
  string instance_address = 3;

  enum PreferredAddress {
    UNKNOWN   = 0;
    INSTANCE  = 1;
    HOST      = 2;
  }

  PreferredAddress preferred_address = 4 [json_name = "preferred_address"];
}

message ActualLRPInternalRoute {
  string hostname = 1 [json_name = "hostname"];
}

message ActualLRP {
  enum Presence {
    ORDINARY   = 0;
    EVACUATING = 1;
    SUSPECT    = 2;
  }

  ActualLRPKey actual_lrp_key = 1;
  ActualLRPInstanceKey actual_lrp_instance_key = 2;
  ActualLRPNetInfo actual_lrp_net_info = 3;
  int32 crash_count = 4 [json_name = "crash_count"];
  string crash_reason = 5;
  string state = 6 [json_name = "state"];
  string placement_error = 7;
  int64 since = 8 [json_name = "since"];
  ModificationTag modification_tag = 9 [json_name = "modification_tag"];
  Presence presence = 10 [json_name = "presence"];
  repeated ActualLRPInternalRoute actual_lrp_internal_routes = 11;
  map<string, string> metric_tags = 12;
  optional bool routable = 13 [json_name = "routable"];
  string availability_zone = 14 [json_name = "availability_zone"];
}
